--- a/public/style.css
+++ b/public/style.css
@@ -35,7 +35,8 @@ form div {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  background-color: #339CFF;
+  background-image:linear-gradient(to right, #DAF7A6, #339CFF);
+  
   border-radius: 5px;
 }
 
